--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -32,8 +32,8 @@ html body {
 }
 
 .iconText {
-  color: #596771;
   padding-top: 3px;
+  padding-left: 5px;
 }
 
 .iconHome {
@@ -41,15 +41,17 @@ html body {
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 30px;
-  height: 23px;
+  height: 24px;
   background-size: cover;
   margin-top: 0px;
+  color: #596771;
 }
 
 .iconHome:hover {
   background: url("http://localhost:3000/img/homeH.png");
-  height: 23px;
+  height: 24px;
   background-size: cover;
+  color: #0083b3;
 }
 
 .iconNotifications {
@@ -57,15 +59,17 @@ html body {
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 65px;
-  height: 23px;
+  height: 24px;
   background-size: cover;
   margin-top: 0px;
+  color: #596771;
 }
 
 .iconNotifications:hover {
   background: url("http://localhost:3000/img/bellH.png");
-  height: 23px;
+  height: 24px;
   background-size: cover;
+  color: #0083b3;
 }
 
 .iconDiscover {
@@ -73,15 +77,17 @@ html body {
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 50px;
-  height: 23px;
+  height: 24px;
   background-size: cover;
   margin-top: 0px;
+  color: #596771;
 }
 
 .iconDiscover:hover {
   background: url("http://localhost:3000/img/iconNavH.png") no-repeat -105px 0px;
-  height: 23px;
+  height: 24px;
   background-size: cover;
+  color: #0083b3;
 }
 
 .iconProfile {
@@ -89,12 +95,14 @@ html body {
   padding-left: 25px;
   padding-top: 0px;
   margin-right: 15px;
-  height: 23px;
+  height: 24px;
   margin-top: 0px;
+  color: #596771;
 }
 .iconProfile:hover {
   background: url("http://localhost:3000/img/userH.png") no-repeat;
   background-size: cover;
+  color: #0083b3;
 }
 
 .iconBird {
